--- a/hw13/src/index.html
+++ b/hw13/src/index.html
@@ -25,11 +25,9 @@
     </div>
   </div>
   <dialog>
-    <p>Это окно, которое сделано на html5 и javascript</p>
-    <button id="close">Закрыть</button>
+    <p>some text</p>
+    <button id="close">Закрити</button>
   </dialog>
-  <button id="show">Открыть всплывающее окно!</button>
-  
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
   <script src="main.js"></script>
